I did a thing...button and dashes

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </div>
             <div class="col-lg-6 col-cd-12 text-center">
                 <h1>Would you like to play a game?</h1>
+                <button id="bgnBtn" class="startBtn" onclick="startGame()">Start Game</button>
                 <h3>Press any button to start game</h3>
                 <div class="row">
                     <div class="col-md-6">
