--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/styles.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
+  
     <script src="assets/javascript/game.js"></script>
 </head>
 <body>
@@ -24,20 +25,21 @@
             <div class="col-lg-6 col-cd-12 text-center">
                 <h1>Would you like to play a game?</h1>
                 <button id="bgnBtn" class="startBtn" onclick="startGame()">Start Game</button>
-                <h3>Press any button to start game</h3>
+              
                 <div class="row">
                     <div class="col-md-6">
-                        <h2>Wins</h2>
+                        <h2>Wins: <span id="winNumber"></span></h2>
+                      
                     </div>
                     <div class="col-md-6">
-                        <h2>Losses</h2>
+                        <h2>Losses: <span id="lossNumber"></span></h2>
                     </div>
                 </div>
                 <div id="wordBox"></div>
                 <div class="row">
                     <div class="col-md-12">
                         <h2>number of guesses</h2>
-                        <span class="integerGuess">0</span>
+                        <span id="integerGuess">0</span>
                     </div>
                     <div class="col-md-12">
                         <h2>Letters used:</h2>
