--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </div>
         <div class="row">
             <div class="col-lg-6 col-md-12 text-center">
-                <div id="winningImage"></div>
+                <div id="winningImage">
+                        <img src="assets/images/guess_image.png" class="guessingImage" title="80's movie" alt="retro title">
+                </div>
             </div>
             <div class="col-lg-6 col-cd-12 text-center">
                 <h1>Would you like to play a game?</h1>
