um...its workinggs

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="col-lg-2 col-md-2"></div>
             <div class="col-lg-4 col-md-4 text-center">
                 <div id="winningImage">
-                        <img src="assets/images/guess_image.png" class="guessingImage" title="80's movie" alt="retro title">
+                        <img src="assets/images/guess_image.png" id="changingImage" class="guessingImage" title="80's movie" alt="retro title">
                 </div>
             </div>
         
