--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="col-md-12">
                         <h2>Letters used:</h2>
-                        <span class="arrayGuessedLetters">0</span>
+                        <span id="arrayGuessedLetters"></span>
                     </div>
                 </div>
             </div>
